fix: position is incorrect when remove position absolute, errormsg not shown since we wrap with MaskPasswowrdInput

--- a/src/components/warp/warp-content/warpContent.scss
+++ b/src/components/warp/warp-content/warpContent.scss
@@ -10,6 +10,11 @@ $radius-size: 4px;
             margin: 0 auto;
             padding: $space-52 0!important;
 
+            &__label {
+                bottom: 63px;
+                position: absolute;         
+            }
+
             &__col {
                 &:nth-child(2) {
                     flex-basis: 24px;
@@ -64,6 +69,10 @@ $radius-size: 4px;
                     background-color: $brand-danger;
                     padding: $space-4;
                     text-align: center;
+                    width: 90%;
+                }
+                &__amount {
+                    width: 100%;
                 }
                 &__submit {
                     @extend .text-format-label-light;
